fix style on mobile

--- a/DCC/client/css/style.css
+++ b/DCC/client/css/style.css
@@ -691,10 +691,6 @@ color: #333;
 	}
 
 
-	.subnavbar {
-		margin-left: -20px;
-		margin-right: -20px;
-	}
 
 
 	.subnavbar-inner {
@@ -986,5 +982,9 @@ body {
 @media only screen and (max-device-width: 480px) {
     .modal.fade.in {
         top: 30px !important;
+    }
+    #header > div.ng-scope > nav > div > div.navbar-header{
+        margin-left: 0px;
+        margin-right: 20px;
     }
 }
